11/10/09 fix layout issues with "products" label in sandwich shop, add min bracket with to make single-product case look better
11/10/09 show "reactants" and "products" bracketed labels below Before and After boxes
11/10/09 remove border around coefficient in RealReactionFormulaNode
11/10/09 move GridLinesNode to piccolo-phet
11/10/09 make grid layout look less regular by randomly choosing a location within each cell
11/10/09 add GridLinesNode, for visualizing grid during debugging
11/10/09 first pass at grid strategy for image layout (looks a little too regular)
11/9/09 make all images children of box node, so that different product/reactant image types are interleaved instead of segregated in layers
11/9/09 consolidate common offsets in layout code
11/9/09 centralize image scaling factors in RPALConstants
11/6/09 use RandomBoxLayoutStrategy in Real Reaction module (images still overlap)
11/6/09 remove positioning of imageParentNodes from AbstractBeforeNode and AbstractAfterNode, shift responsibility to image layout strategies
11/6/09 first attempt at RandomBoxLayoutStrategy, has problems, see TODO list
11/6/09 used Strategy pattern for layout of images in Before and After boxes, implement "stacked" layout strategy
11/5/09 delete edu.colorado.phet.reactantsproductsandleftovers.view.CountNode, unused
11/5/09 javadoc existing code
11/5/09 delete edu.colorado.phet.reactantsproductsandleftovers.controls.IntegerSliderNode, unused (chose spinners instead of sliders)
11/5/09 delete edu.colorado.phet.reactantsproductsandleftovers.controls.IntegerTextFieldNode, unused
# 0.00.10 (36379) Nov 5, 2009
11/5/09 first version with "Real Reactions" tab
11/5/09 make Real Reactions formula look like design doc
11/5/09 show optional names below images in quantity controls and displays
11/5/09 make specialized Before/After boxes nested classes of their respective canvases
11/5/09 improve alignment of controls below Before/After boxes, center each control in its "cell"